# viererfieber

./: .gitignore  app.py  flake.nix  game.py  index.html  lobby.html  lobby.py  test_crs.py
.github/workflows/: html_validation.yml  rust.yml  rust_backend.yml
backend/: Cargo.toml
backend/src/: connect_four.rs  game_protocol.rs  main.rs  webserver.rs
lobby/: Cargo.toml
lobby/backend/: Cargo.toml
lobby/backend/src/: lobby.rs  main.rs
lobby/src/: game_protocol.rs  lobby.rs  main.rs  websocket_misc.rs
static/: index.css  index.js  lobby.css  lobby.js  mobile_lobby.css  root.css  style.css  welcome.css  welcome.js
templates/: impressum.html  index.html  lobby.html  welcome.html
